tests/baselines/reference/nominalTypeMatchingDuplicateDeclarations1.errors.txt
/src/a.ts(9,7): error TS2345: Argument of type 'G.N.X' is not assignable to parameter of type 'G.M.X'.
  Types have separate declarations of a private property 'x'.
/src/a.ts(10,7): error TS2345: Argument of type 'G.N.X' is not assignable to parameter of type 'G.M.X'.
  Types have separate declarations of a private property 'x'.


==== /node_modules/a/index.d.ts (0 errors) ====
    import { G } from "x";
    export function useMX(x: G.M.X): void;
    export function useNX(x: G.N.X): void;
    export const an: G.N.X;
    
==== /node_modules/a/node_modules/x/index.d.ts (0 errors) ====
    export namespace G {
        namespace M {
            class X {
                private x: number;
            }
        }
        namespace N {
            class X {
                private x: number;
            }
        }
    }
    
==== /node_modules/b/index.d.ts (0 errors) ====
    import { G } from "x";
    export const bm: G.M.X;
    export const bn: G.N.X;
    
==== /node_modules/b/node_modules/x/index.d.ts (0 errors) ====
    export namespace G {
        namespace M {
            class X {
                private x: number;
            }
        }
    
        namespace N {
            class X {
                private x: number;
            }
        }
    }
    
==== /src/a.ts (2 errors) ====
    import { an, useMX, useNX } from "a";
    import { bm, bn } from "b";
    
    // Works:
    useMX(bm);
    useNX(bn);
    
    // Error:
    useMX(an);
          ~~
!!! error TS2345: Argument of type 'G.N.X' is not assignable to parameter of type 'G.M.X'.
!!! error TS2345:   Types have separate declarations of a private property 'x'.
    useMX(bn);
          ~~
!!! error TS2345: Argument of type 'G.N.X' is not assignable to parameter of type 'G.M.X'.
!!! error TS2345:   Types have separate declarations of a private property 'x'.
    